style.css
@font-face {
  font-family: "Oughter";
  src: url("fonts/Oughter.woff2");
  font-display: swap;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  min-height: 100vh;
  display: flex;

  font-family: Helvetica, Arial, sans-serif;
}

.sidebar {
  flex: 2;
  position: relative;

  background-image: url("images/digital-art-isolated-house.jpg");
  background-size: cover;
}

.logo {
  position: absolute;
  width: 100%;
  top: 20%;
  padding: 2rem;

  font-family: "Oughter", Helvetica, Arial, sans-serif;
  font-size: 4rem;
  text-align: center;

  color: rgb(250, 250, 250);
  background-color: rgb(0, 0, 0, 50%);
  border-radius: 25px;
}

.main-content {
  flex: 3;
  display: flex;
  flex-direction: column;
  justify-content: center;

  background-color: rgb(250, 250, 250);
}

.heading,
.subheading {
  padding: 1rem 2rem;
}

.heading,
.subheading,
.form-heading {
  font-size: 1.25rem;
  font-weight: bold;
}

form {
  margin: 2rem 0;
}

.form-card {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem;

  background-color: white;
  box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.1);
}

.form-row {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.form-field {
  display: flex;
  flex-direction: column;
}

.form-field label {
  font-size: 0.9rem;
}

.form-field input {
  box-sizing: content-box;
  padding: 0.5rem;
  width: 30ch;

  font-size: 1rem;

  border: 1px solid black;
  border-radius: 3px;
}

.form-field input:focus {
  outline: none;
  border: 1px solid blue;
  box-shadow: 1px 1px 3px rgb(0, 0, 0, 0.5);
}

.form-field input[type="password"]:invalid {
  border: 1px solid red;
}

.form-footer {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem;

  padding-left: 2rem;
}

.form-row button {
  padding: 0.75rem 2rem;

  font-size: 1rem;
  font-weight: bold;

  color: rgb(250, 250, 250);
  background-color: #fa94a1;
  border: none;
  border-radius: 3px;
  box-shadow: 1px 1px 3px rgb(0, 0, 0, 0.5);
}

.form-row p {
  font-size: 1rem;
}

.form-row a {
  text-decoration: none;
  font-weight: bold;
  color: #fa94a1;
}

